--- a/package.json
+++ b/package.json
@@ -2,23 +2,47 @@
   "name": "@gazette/monorepo",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "workspaces": [
     "packages/*",
     "apps/*"
   ],
   "scripts": {
     "dev": "bun run --filter '*' dev",
+    "dev:frontend": "bun run --filter '@gazette/frontend' dev",
+    "dev:backend": "bun run --filter '@gazette/backend' dev",
     "build": "bun run --filter '*' build",
+    "build:frontend": "bun run --filter '@gazette/frontend' build",
+    "build:backend": "bun run --filter '@gazette/backend' build",
+    "start": "bun run --filter '*' start",
+    "start:backend": "bun run --filter '@gazette/backend' start",
     "test": "bun test",
-    "lint": "bun run --filter '*' lint",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "typecheck": "bun run --filter '*' typecheck",
-    "clean": "bun run --filter '*' clean && rm -rf node_modules"
+    "clean": "bun run --filter '*' clean && rm -rf node_modules",
+    "prepare": "husky"
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/bun": "latest",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.2.10",
     "prettier": "^3.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.18.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{js,jsx,json,md}": [
+      "prettier --write"
+    ]
   }
 }
