--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,10 @@
   "types": "./src/index.ts",
   "exports": {
     ".": "./src/index.ts",
-    "./*": "./src/*"
+    "./schemas": "./src/schemas/index.ts",
+    "./schemas/*": "./src/schemas/*.ts",
+    "./types": "./src/types/index.ts",
+    "./constants": "./src/constants.ts"
   },
   "scripts": {
     "dev": "tsc --watch --noEmit",
@@ -20,5 +23,8 @@
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "zod": "^4.2.1"
   }
 }
