[SETUP] Frontend scaffolding (Vite + React + TanStack Router) (vibe-kanban 5446f541)
Setup the frontend application:
- Initialize Vite with React + TypeScript template
- Install and configure TanStack Router with file-based routing
- Setup Tailwind CSS with vintage theme config
- Configure path aliases (@/ for src/)
- Add development server scripts
- Create basic route structure (/auth, /editor, /viewer)
- Install core dependencies: zustand, ky, dnd-kit

Depends on: Monorepo initialization
Deliverables: Working frontend dev server with routing

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -1,14 +1,4 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./dist",
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
-    "jsx": "react-jsx",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["src/**/*", "vite.config.ts"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.test.tsx"]
+  "files": [],
+  "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
 }
