--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -17,4 +17,5 @@ MAX_FILE_SIZE=10485760
 # OPENAI_API_KEY=your_openai_api_key
 
 # Security
-# JWT_SECRET=your_jwt_secret_here
+# JWT_SECRET=your_jwt_secret_here (required in production)
+# JWT_EXPIRES_IN=86400 (token expiration in seconds, default: 24 hours)
