--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
     "@hono/zod-validator": "^0.7.6",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.1",
+    "sharp": "^0.33.5",
     "zod": "^4.2.1"
   },
   "devDependencies": {
