[AI] Backend: BullMQ job queue setup with Redis (vibe-kanban ad774e1a)
Setup background job processing:
- Add BullMQ and Redis dependencies
- Configure Redis connection (docker-compose in dev)
- Create job queue for video generation
- Define job types: analyze-image, generate-video
- Setup worker process
- Add job status tracking in database (jobs table)
- Implement retry logic for failed jobs

Depends on: Backend scaffolding, Gemini client, WAN client
Deliverables: Working job queue for async video generation

Docs:
- docs/TECHNICAL_ARCHITECTURE.md — Tech stack (BullMQ + Redis) + queue/worker folder layout
- docs/PRD.md — Phase 3: AI Integration (WAN + job queue)
- docs/DATA_MODELS.md — Generation schema (job status/progress)

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
+    "dev:worker": "bun run --hot src/queue/worker.ts",
     "build": "bun build src/index.ts --outdir ./dist --target bun",
     "start": "bun run dist/index.js",
+    "worker": "bun run src/queue/worker.ts",
     "test": "bun test",
     "lint": "prettier --check \"src/**/*.ts\"",
     "typecheck": "tsc --noEmit",
@@ -19,8 +21,10 @@
   "dependencies": {
     "@gazette/shared": "workspace:*",
     "@hono/zod-validator": "^0.7.6",
+    "bullmq": "^5.25.0",
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.1",
+    "ioredis": "^5.4.1",
     "sharp": "^0.33.5",
     "zod": "^4.2.1"
   },
