[AI] Backend: Gemini 3 Flash Preview client for image analysis (vibe-kanban 4e4cf33f)
Integrate Gemini 3 Flash Preview API:
- Install Google AI SDK
- Create Gemini client with API key from env
- Implement analyzeImage function (sends image, gets animation suggestions)
- Parse and structure suggestions (3-5 animation prompts)
- Add error handling and retries
- Write integration tests

Depends on: Backend scaffolding
Deliverables: Working Gemini 3 Flash Preview integration for image analysis

Docs:
- docs/PRD.md — 2.2 Animation Suggestion Engine (update to Gemini 3 Flash Preview)
- docs/TECHNICAL_ARCHITECTURE.md — External services (Gemini 3 Flash Preview)
- docs/API_SPEC.md — POST /api/images/:id/analyze
- docs/DATA_MODELS.md — ImageAnalysisResult schema

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@gazette/shared": "workspace:*",
+    "@google/genai": "^1.17.1",
     "@hono/zod-validator": "^0.7.6",
     "bullmq": "^5.25.0",
     "drizzle-orm": "^0.45.1",
