--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.45.1",
     "hono": "^4.11.1",
     "ioredis": "^5.4.1",
+    "jszip": "^3.10.1",
     "sharp": "^0.33.5",
     "zod": "^4.2.1"
   },
