[DEPLOY] VPS deployment setup (Caddy + PM2) (vibe-kanban 02328e30)
Setup production deployment:
- Document VPS setup (Hetzner/OVH)
- Install Bun, Redis, Caddy on VPS
- Configure Caddy as reverse proxy with HTTPS
- Setup PM2 for backend process management
- Create production build scripts
- Configure environment variables
- Setup Redis for production
- Add deployment script (deploy.sh)
- Document backup strategy for SQLite DB
- Add health check monitoring

Depends on: All backend tickets
Deliverables: Production deployment on VPS

Docs:
- docs/TECHNICAL_ARCHITECTURE.md — Section 5 Deployment Strategy (target environment + step-by-step)

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "dev:worker": "bun run --hot src/queue/worker.ts",
-    "build": "bun build src/index.ts --outdir ./dist --target bun",
+    "build": "bun build src/index.ts src/queue/worker.ts --outdir ./dist --target bun",
     "start": "bun run dist/index.js",
     "worker": "bun run src/queue/worker.ts",
     "test": "bun test",
