--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "bun run --filter '*' build",
     "build:frontend": "bun run --filter '@gazette/frontend' build",
     "build:backend": "bun run --filter '@gazette/backend' build",
+    "build:production": "bun run build:frontend && bun run build:backend",
     "start": "bun run --filter '*' start",
     "start:backend": "bun run --filter '@gazette/backend' start",
     "test": "bun test",
