--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -28,7 +28,9 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-alert-dialog": "^1.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
