--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -16,10 +16,20 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@gazette/shared": "workspace:*",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toast": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-router": "^1.120.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,9 +38,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
-    "zustand": "^5.0.5",
-    "@radix-ui/react-toast": "^1.2.6",
-    "@radix-ui/react-alert-dialog": "^1.1.15"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
