--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -35,6 +35,7 @@
     "clsx": "^2.1.1",
     "ky": "^1.7.5",
     "lucide-react": "^0.562.0",
+    "qrcode.react": "^3.1.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0",
