--- a/apps/backend/.env.example
+++ b/apps/backend/.env.example
@@ -13,8 +13,15 @@ UPLOAD_DIR=./data/uploads
 MAX_FILE_SIZE=10485760
 
 # AI Services (for video generation)
-# REPLICATE_API_TOKEN=your_replicate_api_token
-# OPENAI_API_KEY=your_openai_api_key
+# Get your WAN API key from: https://evolink.ai/dashboard/keys
+WAN_API_KEY=your_evolink_api_key
+# GEMINI_API_KEY=your_gemini_api_key
+
+# WAN Video Generation Options
+# WAN_VIDEO_DURATION_SECONDS=5  # 5, 10, or 15 seconds
+# WAN_VIDEO_RESOLUTION=720p     # 720p or 1080p
+# WAN_POLL_INTERVAL_MS=15000    # Polling interval for video status
+# WAN_MAX_POLL_MS=720000        # Max polling time (12 minutes)
 
 # Security
 # JWT_SECRET=your_jwt_secret_here (required in production)
