--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -29,6 +29,8 @@
     "ioredis": "^5.4.1",
     "jszip": "^3.10.1",
     "pdf-lib": "^1.17.1",
+    "pino": "^10.1.0",
+    "pino-pretty": "^13.1.3",
     "puppeteer": "^24.34.0",
     "sharp": "^0.33.5",
     "zod": "^4.2.1"
