--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,12 @@ build/
 
 # Environment variables
 .env
+!.env.example
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+*.env*
 
 # IDE
 .vscode/
