--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -53,6 +53,7 @@
     "react-resizable-panels": "^4.0.9",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18",
     "zod": "^4.2.1",
     "zustand": "^5.0.5"
   },
